--- a/.github/workflows/rss-to-md.yml
+++ b/.github/workflows/rss-to-md.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Convert RSS to Markdown
         uses: keiranlovett/rss-feed-to-markdown@main
         with:
-          feed_url: 'https://www.getrubix.com/blog?format=rss'
+          feed_url: 'https://rubixdev.blob.core.windows.net/site/rubix-full-blog-feed.xml'
           template_file: 'template.md'
           output_dir: 'content/blog'
 
